# tsb-ad-parser

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml
data/: README.md
data/splits/: TSB-AD-M-Eval.csv  TSB-AD-M-Label.csv  TSB-AD-U-Eval.csv  TSB-AD-U-Label.csv
src/: README.md
src/app/: explorer.py  precompute.py  utils.py
src/app/pages/: anomaly_clusters.py  edge_cases.py  global_summary.py  series_browser.py
src/tsbadparser/: __init__.py  parser.py
tests/: conftest.py  test_parser.py
