[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tsbadparser"
version = "0.1.0"
description = "Parser for the TSB-AD time series anomaly detection benchmark"
requires-python = ">=3.10"
dependencies = [
    "numpy",
    "pandas",
    "tqdm",
    "matplotlib",
    "seaborn",
]

[tool.setuptools.packages.find]
where = ["src"]
include = ["tsbadparser*"]
